<resources>
    <string name="app_name">電影時刻表</string>
    <string name="TopMovie">票房排行</string>
    <string name="Movie">電影資訊</string>
    <string name="FirstMovie">首輪電影</string>
    <string name="SecondMovie">二輪電影</string>
    <string name="Theater">各大影城</string>
    <string name="Recent">近期上映</string>
    <string name="Weekly">本周新片</string>
    <string name="title">標題</string>
    <string name="description">描述</string>
    <string name="leave_app">- 離開程式? -</string>
    <string name="leave">離開</string>
    <string name="cancel">取消</string>
    <string name="download">下載</string>
    <string name="thanks">不用,謝謝</string>
    <string name="advice_and_feedback">建議回饋</string>
    <string name="facebook">FB粉絲團</string>
    <string name="entertainment_news">電影報</string>   
    <string name="clear">清除緩存</string>
    <string name="clear_finish">清除緩衝完成</string>
    <string name="tv_entertainment">電視綜藝</string>
    <string name="movie_notes">電影櫃</string>
    <string name="tv_drama">電視連續劇</string>
    
    <string name="ga_api_key">UA-33141342-3</string>
    <!-- <string name="admob_key">a1508932444a8e4</string>  admob only -->
    <string name="admob_key">e735f9c4fab1415a</string>  <!-- admob mediation -->
    <string name="vpon_key">8a8081823a96d3cc013a9c6364930266</string>
    <string name="adwhirl_key">1275403b12c5469da212dd1a158532f0</string>
    
    <bool name="ga_auto_activity_tracking">true</bool>
    <bool name="ga_debug">true</bool>
    <item format="integer" name="ga_dispatchPeriod" type="integer">120</item>
    <bool name="ga_dryRun">false</bool>
    
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_contents">Contents</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_loading_apps">Loading list of applications\u2026</string>
    <string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
</resources>
