<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/main_color_grey_dark"
     >
    
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_color_grey_dark" >
    <RelativeLayout 
	    android:id="@+id/relativielayout_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:background="@color/black" >
	    <TextView 
	        android:id="@+id/textview_topmovie"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:gravity="center"
	        android:background="@color/black"
	        android:textColor="@color/textcolor_grey"
	        android:textSize="20dp"
	        android:text="@string/TopMovie" 
	        />
	    
	    <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toLeftOf="@id/textview_topmovie"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="2dp"
	        android:layout_marginBottom="2dp"
	        android:layout_marginRight="5dp"
	        android:layout_alignTop="@+id/textview_topmovie"
	        android:layout_alignBottom="@+id/textview_topmovie"
	        android:src="@drawable/top_movie" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/linearlayout_topmovie" 
        android:layout_width="wrap_content"
        android:background="@color/background"
        android:layout_height="190dp"
        android:layout_below="@id/relativielayout_title"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            >
		    <ProgressBar 
		        android:id="@+id/progressbar_topmovie"
		        style="?android:attr/progressBarStyle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:visibility="gone" />
	    </LinearLayout>
	    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/gallery_item_background"
            android:gravity="center"
            >
            <ImageView android:id="@+id/imageview_topmovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:padding="10dp"
                android:src="@drawable/renew_3"
                android:visibility="gone" />
        </LinearLayout>
	    <Gallery
	        android:id="@+id/gallery_topmovie"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:visibility="gone"
	        android:spacing="10dp" />
    </RelativeLayout>
    <!--  
    <TextView 
        android:id="@+id/textview_movie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_topmovie"
        android:background="@color/black"
        android:paddingLeft="2dp"
        android:textColor="@color/textcolor_grey"
        android:text="@string/Movie" />
    -->
    
    <Button 
        android:id="@+id/button_weekly"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_topmovie"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawableLeft="@drawable/week"
        android:drawablePadding="10dp"
        android:textColor="@color/textcolor_grey"
        android:textSize="22dp"
        android:text="@string/Weekly" />
    <View 
            android:id="@+id/view_line1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_weekly"
            android:background="@color/grey05"
            /> 
    <Button 
        android:id="@+id/button_firstmovie"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@id/view_line1"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawableLeft="@drawable/first"
        android:drawablePadding="10dp"
        android:textSize="22dp"
        android:textColor="@color/textcolor_grey"
        android:text="@string/FirstMovie" />
    <View 
            android:id="@+id/view_line2"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_firstmovie"
            android:background="@color/grey05"
            />
    <Button 
        android:id="@+id/button_secondmovie"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line2"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawableLeft="@drawable/second"
        android:drawablePadding="10dp"
        android:textSize="22dp"
        android:textColor="@color/textcolor_grey"
        android:text="@string/SecondMovie" />
    <View 
            android:id="@+id/view_line3"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_secondmovie"
            android:background="@color/grey05"
            />
    <Button 
        android:id="@+id/button_recentmovie"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line3"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawableLeft="@drawable/recent"
        android:drawablePadding="10dp"
        android:textColor="@color/textcolor_grey"
        android:textSize="22dp"
        android:text="@string/Recent" />
    <View 
        android:id="@+id/view_line4"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/button_recentmovie"
        android:background="@color/grey05"/>

    <Button 
        android:id="@+id/button_theaterlike"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line4"
        android:background="@drawable/button_background"
        android:gravity="center_vertical|left"
        android:drawableRight="@drawable/navigation_next"
        android:drawableLeft="@drawable/theaterlike"
        android:drawablePadding="10dp"
        android:textColor="@color/textcolor_grey"
        android:textSize="22dp"
        android:text="最愛影城" />
    <View 
            android:id="@+id/view_line5"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_theaterlike"
            android:background="@color/grey05"
            /> 
    

</RelativeLayout>

    </ScrollView>